--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass-loader": "^16.0.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
-    "webpack-bundle-tracker": "^3.1.1"
+    "webpack-bundle-tracker": "^3.1.1",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
